--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   flutter_dotenv: ^5.1.0
   image_picker: ^1.1.2
   path: ^1.8.3
+  pedometer: ^4.0.1
   provider: ^6.1.1
+  percent_indicator: ^4.2.2
+  intl: ^0.19.0
   shared_preferences: ^2.2.2
   kakao_flutter_sdk: ^1.4.1
   kakao_flutter_sdk_common: ^1.4.1
