--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   kakao_flutter_sdk_common: ^1.4.1
   csv: ^5.0.0
   cached_network_image: ^3.3.1
+  geolocator: ^11.0.0
+  permission_handler: ^11.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
