--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,8 @@ flutter:
     - assets/images/
     - assets/splash/splash.png
     - .env
+    - assets/mountain_coordinates.csv
+    - assets/mountain_images_sample.csv
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
