--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 03 10:36:47 KST 2025
-sdk.dir=C\:\\Users\\Gates\\AppData\\Local\\Android\\Sdk
+#Thu Jun 12 10:10:01 KST 2025
+sdk.dir=C\:\\Users\\805-06\\AppData\\Local\\Android\\Sdk
