--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   geolocator: ^11.0.0
   permission_handler: ^11.3.0
   flutter_naver_map: ^1.3.1
+  html_unescape: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -102,8 +103,8 @@ flutter:
   assets:
     - assets/images/
     - assets/splash/splash.png
+    - assets/mtimages/
     - .env
-    - assets/csv/mountain_images_sample.csv
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
