--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   html_unescape: ^2.0.0
   sliding_up_panel: ^2.0.0
   url_launcher: ^6.3.1
+  charset_converter: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
